--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
+      <ul class="task-list" id="incomplete-tasks">
+        <li class="task-item">
           <input type="checkbox">
           <label class="task-text">Pay Bills</label>
           <input type="text" class="task-text">
           <button class="task-edit">Edit</button>
           <button class="task-delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="task-item editMode">
           <input type="checkbox">
           <label class="task-text">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task-text">
@@ -39,7 +39,7 @@
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
-        <li>
+        <li class="task-item">
           <input type="checkbox" checked>
           <label class="task-text">See the Doctor</label>
           <input type="text" class="task-text">
