--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header class="header">
+      <h1 hidden>eisenhower-matrix</h1>
       <img src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
+    </header>
+    <main class="main">
       <p id="task-add">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -18,7 +19,7 @@
           <button>Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h2>Todo</h2>
       <ul class="task-list" id="incomplete-tasks">
         <li class="task-item">
           <input type="checkbox">
@@ -37,7 +38,7 @@
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h2>Completed</h2>
       <ul id="completed-tasks">
         <li class="task-item">
           <input type="checkbox" checked>
@@ -49,7 +50,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
