--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <h1 hidden>eisenhower-matrix</h1>
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -26,7 +26,7 @@
           <label class="task-text">Pay Bills</label>
           <input type="text" class="task-text">
           <button class="task-edit">Edit</button>
-          <button class="task-delete"><img src="./remove.svg"></button>
+          <button class="task-delete"><img src="./remove.svg" alt="remove-btn"></button>
         </li>
         <li class="task-item editMode">
           <input type="checkbox">
@@ -34,7 +34,7 @@
           <input type="text" value="Go Shopping" class="task-text">
           <button class="task-edit">Save</button>
           <button class="task-delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove-btn">
           </button>
         </li>
       </ul>
@@ -46,7 +46,7 @@
           <input type="text" class="task-text">
           <button class="task-edit">Edit</button>
           <button class="task-delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove-btn">
           </button>
         </li>
       </ul>
