--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header class="header">
       <h1 hidden>eisenhower-matrix</h1>
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
       <p id="task-add">
